# django-hyper-dashboard

./: .gitignore  LICENSE  MANIFEST.in  README.md  gulpfile.js  package-lock.json  setup.cfg
core/: __init__.py  admin.py  escolhas.py  models.py  settings.py  urls.py  widgets.py
core/static/core/css/: base-admin.css  login.css  style.css
core/static/core/js/: cep.js
core/templates/admin/: base.html
core/templates/admin/includes/: fieldset.html
django_hyper_dashboard.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
hyper_dashboard/: __init__.py  apps.py  config.py  menu.py  widgets.py
hyper_dashboard/static/: app.min.js
hyper_dashboard/static/admin/css/: changelists.css
hyper_dashboard/static/hyper/css/: app.css  base-admin.css  navbar.css  style.css
hyper_dashboard/static/hyper/js/: alertas.js  app.js  app.min.js  clinicas.js  colaboradores.js  convenios.js  convite-profissionais.js  date-picker-br.js  date.picker.js  exames.js  formatar.js  grupo-exames.js  popups.js  (+5 more)
hyper_dashboard/templates/admin/: base.html  change_form.html  change_list.html  change_list_results.html  messages.html  navbar.html  submit_line.html
hyper_dashboard/templates/suit/: search_form.html
hyper_dashboard/templates/widgets/: display.html  switch.html  timepicker.html  url.html
hyper_dashboard/templatetags/: navbar.py  suit_forms.py  suit_list.py  suit_menu.py  suit_tags.py  tag_notification.py
hyper_dashboard/utils/: elementos.py  gerador.py  mascara.py
static/hyper/css/: style.css
static/suit/js/: suit.sortables.js
utils/: datas.py  formatos.py  validacoes.py
